@@ -1,3 +1,8 @@
+2022-05-15  Mark Wielaard  <mark@klomp.org>
+
+	* libdwfl.h (dwfl_module_addrinfo): Update docs and nonnull
+	attribute to make clear offset and sym cannot be NULL.
+
 2022-04-22  Mark Wielaard  <mark@klomp.org>
 
 	* debuginfod-client.c (init_control): New static pthread_once_t.
